# eema

./: .cproject  .gitignore  .project  .travis.yml  CMakeCache.txt  CMakeLists.txt  README.md  clean.sh  main.cpp  makefile
Documentation/: Doxyfile  Doxyfile.bak
Documentation/html/: _materials_8cpp.html  _materials_8cpp__incl.dot  _materials_8cpp__incl.map  _materials_8cpp__incl.md5  _materials_8cpp_source.html  _materials_8h.html  _materials_8h__dep__incl.dot  _materials_8h__dep__incl.map  _materials_8h__dep__incl.md5  _materials_8h__incl.dot  _materials_8h_source.html  _mesh_8cpp.html  _mesh_8cpp__incl.dot  _mesh_8cpp__incl.map  _mesh_8cpp__incl.md5  _mesh_8cpp_source.html  _mesh_8h.html  _mesh_8h__dep__incl.dot  _mesh_8h__dep__incl.map  _mesh_8h__dep__incl.md5  _mesh_8h__incl.dot  _mesh_8h__incl.map  _mesh_8h__incl.md5  _mesh_8h_source.html  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  annotated.html  annotated_dup.js  class_materials-members.html  class_materials.html  class_materials.js  class_materials_a06e59a5742730b2292d39b7488523505_icgraph.map  class_materials_a12e4c6a14b3cc2ed6665ab0fe7870ef0_icgraph.dot  class_materials_a12e4c6a14b3cc2ed6665ab0fe7870ef0_icgraph.md5  class_mesh-members.html  class_mesh.html  class_mesh.js  class_mesh_a0b0f7458f07745240d9bda967cda12de_icgraph.dot  class_mesh_a0b0f7458f07745240d9bda967cda12de_icgraph.md5  class_mesh_a2e0931c78a7ef01ccc9bf8f0dd74afb0_icgraph.map  (+727 more)
Documentation/latex/: _materials_8cpp.tex  _materials_8cpp__incl.dot  _materials_8cpp__incl.md5  _materials_8h.tex  _materials_8h__dep__incl.dot  _materials_8h__dep__incl.md5  _materials_8h__incl.dot  _materials_8h__incl.md5  _mesh_8cpp.tex  _mesh_8cpp__incl.dot  _mesh_8cpp__incl.md5  _mesh_8h.tex  _mesh_8h__dep__incl.dot  _mesh_8h__dep__incl.md5  _mesh_8h__incl.dot  class_materials.tex  class_materials_a06e59a5742730b2292d39b7488523505_icgraph.md5  class_materials_a12e4c6a14b3cc2ed6665ab0fe7870ef0_icgraph.dot  class_materials_a12e4c6a14b3cc2ed6665ab0fe7870ef0_icgraph.md5  class_mesh.tex  class_mesh_a0b0f7458f07745240d9bda967cda12de_icgraph.dot  class_mesh_a0b0f7458f07745240d9bda967cda12de_icgraph.md5  class_mesh_a2e0931c78a7ef01ccc9bf8f0dd74afb0_icgraph.md5  class_mesh_aa8a6f260e9589be4c0a2fcc146e696d5_cgraph.md5  class_mesh_aef02c2a5db515276d9f1c50efb18d0a4_cgraph.dot  class_mesh_aef02c2a5db515276d9f1c50efb18d0a4_cgraph.md5  class_mesh_aef02c2a5db515276d9f1c50efb18d0a4_icgraph.dot  class_mesh_aef02c2a5db515276d9f1c50efb18d0a4_icgraph.md5  class_mesh_af242dbb4627c09410975a0e67389e0de_icgraph.md5  class_mesh_af3cbe568c8a36832659ac01025e8d774_icgraph.dot  class_mesh_af3cbe568c8a36832659ac01025e8d774_icgraph.md5  dir_0426055fa410f871dd1072a08298a285.tex  dir_1892ed22c7c50040ecf25a1c82e6690e.tex  dir_230b55927f84ac321ee3c816cbfb0a88.tex  dir_230b55927f84ac321ee3c816cbfb0a88_dep.md5  dir_349a5ab59e0ecd7d9dbcb778f739cee7.tex  dir_349a5ab59e0ecd7d9dbcb778f739cee7_dep.md5  dir_4239d0202dc69e11c9cf822a4b622154.tex  dir_4239d0202dc69e11c9cf822a4b622154_dep.md5  dir_4624a63be47edd0941d7ec2322c7d949.tex  (+451 more)
Documentation/rtf/: dir_0426055fa410f871dd1072a08298a285.rtf  dir_1892ed22c7c50040ecf25a1c82e6690e.rtf  dir_230b55927f84ac321ee3c816cbfb0a88.rtf  dir_349a5ab59e0ecd7d9dbcb778f739cee7.rtf  dir_4239d0202dc69e11c9cf822a4b622154.rtf  dir_59f0d5b57a429708a9afcfe8ae35deed.rtf  dir_64561e8eac2f7b8758bf2a759ce01022.rtf  refman.rtf  (+15 more)
Test-teja/: a.cpp
Testing/: a.cpp
examples/: CMakeLists.txt
examples/example-1/: CMakeLists.txt  clean.sh  input.inp  input_displacement.inp  main.cpp
examples/example-1/results/: external_energy_system.txt  internal_energy_system.txt  kinetic_energy_system.txt  system_mass_inverse.txt  total_energy_system.txt
examples/example-1/results/vtk/: eem_matrix_0.vtk  eem_truss_0.vtk
examples/example-1/results/vtu/: eem_matrix_0.vtu  eem_matrix_1.vtu  eem_matrix_10.vtu  eem_matrix_100.vtu  eem_matrix_1000.vtu  eem_matrix_101.vtu  eem_matrix_102.vtu  eem_matrix_103.vtu  eem_matrix_106.vtu  eem_matrix_109.vtu  eem_matrix_11.vtu  eem_matrix_110.vtu  eem_matrix_113.vtu  eem_matrix_114.vtu  eem_matrix_118.vtu  eem_matrix_119.vtu  eem_matrix_12.vtu  eem_matrix_124.vtu  eem_matrix_125.vtu  eem_matrix_126.vtu  eem_matrix_127.vtu  eem_matrix_128.vtu  eem_matrix_129.vtu  eem_matrix_130.vtu  eem_matrix_132.vtu  eem_matrix_135.vtu  eem_matrix_137.vtu  eem_matrix_138.vtu  eem_matrix_139.vtu  eem_matrix_14.vtu  eem_matrix_140.vtu  eem_matrix_141.vtu  eem_matrix_146.vtu  eem_matrix_147.vtu  eem_matrix_148.vtu  eem_matrix_149.vtu  eem_matrix_151.vtu  eem_matrix_152.vtu  eem_matrix_155.vtu  eem_matrix_157.vtu  (+1216 more)
gui/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  main_window.ui
gui/resources/: resources.qrc
headers/: Materials.h  Mesh.h  functions.h
include/: Constraint.h  GlobalVariables.h  Mesh.h  functions.h  functions.h~
src/: CMakeLists.txt
src/Elements/: CMakeLists.txt
src/Elements/ElementCalculations/: fe_calCentroid.cpp
src/Elements/Mass/: fe_massLumped.cpp
src/Elements/ShapeFunctions/: fe_dn_iso_8.cpp
src/FEM/: CMakeLists.txt
src/FEM/Assembly-Global-Local/: fe_scatter.cpp
src/FEM/BoundaryConditions/: fe_apply_bc.cpp  fe_apply_bc.cpp~
src/FEM/Explicit/: fe_mainEXPLICIT.cpp  fe_mainEXPLICIT.cpp~
src/FEM/RHSNodalForce/: fe_getforce.cpp
src/FEM/SolidMechanics/: fe_calculateAccln.cpp  fe_calculateFR.cpp  fe_calculateMass.cpp  fe_findIntgPoints_1d.cpp  fe_getForce_3d_embed.cpp  fe_getForce_3d_normal.cpp  fe_getforce.cpp
src/Input-Output/: CMakeLists.txt
src/Input-Output/Input/: Constraint.cpp  Mesh.cpp  fe_mainRead.cpp  fe_text2matrix.cpp
src/Input-Output/Output/: fe_pvd.cpp  fe_pvd.cpp~  fe_vector2text.cpp  fe_vtu.cpp
src/Materials/: CMakeLists.txt
src/Materials/Mooney-Rivlin-Hyperelastic/: fe_mooneyrivlin_hyperelastic.cpp
src/Materials/StressUpdate/: fe_stressUpdate.cpp
src/Math/: CMakeLists.txt
src/Math/GeneralMath/: fe_calVolume.cpp  fe_function.cpp  fe_newtonRhapson.cpp
src/TimeStep/: CMakeLists.txt  fe_calTimeStep.cpp  fe_getTimeStep.cpp
templates/explicit-dynamic/: CMakeLists.txt  README  input.inp
(+1236 files in other folders)
