SET(src 
    TimeStep/fe_getTimeStep.cpp
    TimeStep/fe_calWaveSpeed.cpp
    TimeStep/fe_calTimeStep.cpp
    # Math Functions
    Math/GeneralMath/fe_newtonRhapson.cpp
    Math/GeneralMath/fe_invMatrix.cpp
    Math/GeneralMath/fe_function.cpp
    Math/GeneralMath/fe_detMatrix.cpp
    Math/GeneralMath/fe_concatenate_vector2matrix.cpp
    Math/GeneralMath/fe_calVolume.cpp
    Math/GeneralMath/fe_calArea_4.cpp
    #Materials 
    Materials/fe_get_mats.cpp
    Materials/StressUpdate/fe_stressUpdate_1d.cpp
    Materials/StressUpdate/fe_stressUpdate.cpp
    Materials/Saint-Venant/fe_saintvenant_elastic.cpp
    Materials/Ogden-Hyperelastic/fe_ogden_hyperelastic.cpp
    Materials/Mooney-Rivlin-Hyperelastic/fe_mooneyrivlin_hyperelastic.cpp
    Materials/Elastic/fe_simple_elastic.cpp
    #Input-Output
    Input-Output/Input/fe_text2matrix.cpp
    Input-Output/Input/fe_mainRead.cpp
    Input-Output/Input/Mesh.cpp
    Input-Output/Input/Materials.cpp
    Input-Output/Output/fe_write.cpp
    Input-Output/Output/fe_vtu.cpp
    Input-Output/Output/fe_vtk.cpp
    Input-Output/Output/fe_vector2text.cpp
    Input-Output/Output/fe_simulationTime.cpp
    Input-Output/Output/fe_matrix2text.cpp
    Input-Output/Output/fe_display.cpp
    # Elements
    Elements/ShapeFunctions/fe_shapes.cpp
    Elements/ShapeFunctions/fe_shapeMatrix.cpp
    Elements/ShapeFunctions/fe_dn_iso_8.cpp
    Elements/ShapeFunctions/fe_dn_actual_8.cpp
    Elements/Quadrature/fe_guass_weights_3d.cpp
    Elements/Quadrature/fe_guass_weights.cpp
    Elements/Quadrature/fe_guass_points_3d.cpp
    Elements/Quadrature/fe_guass_points.cpp
    Elements/Mass/fe_mass_hex.cpp
    #Elements/InternalNodalForce/fe_stiffness_hex.cpp
    #Elements/InternalNodalForce/fe_stiffness_embed_truss.cpp
    Elements/ElementCalculations/fe_voigt2tensor.cpp
    Elements/ElementCalculations/fe_transformMass.cpp
    Elements/ElementCalculations/fe_tensor2voigt.cpp
    Elements/ElementCalculations/fe_strDispMatrix.cpp
    Elements/ElementCalculations/fe_minElementLength.cpp
    Elements/ElementCalculations/fe_maxElementLength.cpp
    Elements/ElementCalculations/fe_calTransformation.cpp
    Elements/ElementCalculations/fe_calSimpTransformation.cpp
    Elements/ElementCalculations/fe_calJacobian.cpp
    Elements/ElementCalculations/fe_calDefGrad.cpp
    # FEM
    FEM/RHSNodalForce/fe_update.cpp
    FEM/RHSNodalForce/fe_getforce.cpp
    FEM/Explicit/fe_mainEXPLICIT.cpp
    FEM/Electromechanics/fe_electromechanics.cpp
    #FEM/Constraints/EmbeddedElement/fe_embed_preprocessing.cpp
    FEM/BoundaryConditions/fe_apply_bc.cpp
    FEM/Assembly-Global-Local/fe_scatter.cpp
    FEM/Assembly-Global-Local/fe_gather.cpp
    FEM/Assembly-Global-Local/fe_find_index.cpp
    FEM/Assembly-Global-Local/fe_assemble_mass.cpp
     )

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib) 
ADD_LIBRARY(eema STATIC ${src})
