cmake_minimum_required(VERSION 2.6)
project(explicit-dynamic)
enable_language(CXX)
#find_package(Eema REQUIRED)
#include_directories(${EEMA_INCLUDE_DIR})
file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/results)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/results/vtu)
set (EIGEN_INCLUDE_DIR $ENV{EEMA_HOME}/third-party-libs/eigen3)
include_directories(${EIGEN_INCLUDE_DIR})
include_directories($ENV{EEMA_HOME}/include)
add_library(eema STATIC IMPORTED)
set_property(TARGET eema PROPERTY IMPORTED_LOCATION $ENV{EEMA_HOME}/lib/libeema.a)
add_executable(main main.cpp)
target_link_libraries(main eema)
